--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,8 +4,15 @@
           package="com.client.traveller">
 
     <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+
+    <!--google maps-->
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+
 
     <application
+            android:usesCleartextTraffic="true"
+            android:name=".TravellerAplication"
             android:allowBackup="true"
             android:icon="@mipmap/ic_launcher"
             android:label="@string/app_name"
@@ -13,9 +20,35 @@
             android:supportsRtl="true"
             android:theme="@style/AppTheme"
             tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".ui.auth.SignupActivity">
+
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="@string/google_maps_key"/>
+
+        <activity
+                android:name=".ui.settings.SettingsActivity"
+                android:label="@string/title_activity_settings"
+                android:parentActivityName=".ui.home.HomeActivity"
+                android:theme="@style/AppTheme.StatusBar.Transparent"
+        >
+
         </activity>
-        <activity android:name=".ui.auth.LoginActivity">
+        <activity
+                android:name=".ui.home.HomeActivity"
+                android:theme="@style/AppTheme.StatusBar.Transparent"
+        >
+        </activity>
+        <activity
+                android:name=".ui.auth.SignupActivity"
+                android:theme="@style/AppTheme.StatusBar.Transparent"
+        >
+
+        </activity>
+        <activity
+                android:name=".ui.auth.LoginActivity"
+                android:theme="@style/AppTheme.StatusBar.Transparent"
+        >
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
