--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,12 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.3.31'
-    ext.room_version= '2.1.0-beta01'
+    ext.kotlin_version = '1.3.41'
+    ext.room_version= '2.2.0-alpha01'
     ext.navigation_version= '1.0.0'
-    ext.kodein_version='5.2.0'
-    ext.lifecycle_version= '2.2.0-alpha01'
-    ext.retrofit_version= '2.5.0'
+    ext.kodein_version='6.3.3'
+    ext.lifecycle_version= '2.2.0-alpha02'
+    ext.retrofit_version= '2.6.1'
     repositories {
         google()
         jcenter()
