--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,11 +8,13 @@ apply plugin: 'kotlin-kapt'
 
 apply plugin: 'androidx.navigation.safeargs'
 
+apply plugin: 'com.google.gms.google-services'
+
 android {
     compileSdkVersion 28
     defaultConfig {
         applicationId "com.client.traveller"
-        minSdkVersion 23
+        minSdkVersion 23 //android 6.0
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
@@ -45,27 +47,27 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.1.0-rc01'
-    implementation 'androidx.core:core-ktx:1.2.0-alpha02'
+    implementation 'androidx.core:core-ktx:1.2.0-alpha03'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.0-beta2'
     implementation 'com.google.android.material:material:1.1.0-alpha09'
     implementation 'androidx.annotation:annotation:1.1.0'
-    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0-alpha02'
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
     implementation 'androidx.preference:preference:1.1.0-rc01'
     testImplementation 'junit:junit:4.13-beta-3'
     androidTestImplementation 'androidx.test:runner:1.3.0-alpha02'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0-alpha02'
 
-    implementation 'com.android.support:design:28.0.0'
-    implementation 'com.android.support:recyclerview-v7:28.0.0'
-    implementation 'com.android.support:cardview-v7:28.0.0'
+    implementation 'com.google.android.material:material:1.0.0'
+    implementation 'androidx.recyclerview:recyclerview:1.0.0'
+    implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'com.github.scottyab:showhidepasswordedittext:0.8'
 
     // Gson
     implementation "com.google.code.gson:gson:2.8.5"
 
     // Kotlin Android Coroutines - zarzadzanie watkami, dlugie wykonywanie zadan
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.1.1'
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.1.1"
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.0'
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.0"
 
     // Retrofit - zarzadzanie rest api - endpoint
     implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
@@ -88,21 +90,24 @@ dependencies {
     // Room - baza danych ( adnotacje query, database, entity, itd)
     implementation "androidx.room:room-runtime:$room_version"
     implementation "androidx.legacy:legacy-support-v4:1.0.0"
-    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0-alpha02'
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0-alpha02'
     kapt "androidx.room:room-compiler:$room_version"
 
 //     Navigation - latwe nawigowanie pomiedzy fragmentami itd
-    implementation "android.arch.navigation:navigation-fragment:$navigation_version"
-    implementation "android.arch.navigation:navigation-ui:$navigation_version"
-    implementation "android.arch.navigation:navigation-fragment-ktx:$navigation_version"
-    implementation "android.arch.navigation:navigation-ui-ktx:$navigation_version"
+//    implementation 'androidx.navigation:navigation-fragment:2.0.0-rc02'
+//    implementation 'androidx.navigation:navigation-ui:2.0.0-rc02'
+//    implementation 'androidx.navigation:navigation-fragment-ktx:2.0.0-rc02'
+//    implementation 'androidx.navigation:navigation-ui-ktx:2.0.0-rc02'
 
     implementation 'com.github.arimorty:floatingsearchview:2.1.1'
-    implementation 'com.android.support:appcompat-v7:28.0.0'
+    implementation 'androidx.appcompat:appcompat:1.0.2'
 
-    implementation "com.google.android.gms:play-services:12.0.1"
+    implementation "com.google.android.gms:play-services-maps:17.0.0"
+    implementation "com.google.android.gms:play-services-location:17.0.0"
     implementation "com.google.maps:google-maps-services:0.9.4"
     implementation "org.slf4j:slf4j-simple:1.7.26"
 
+//    implementation 'com.google.firebase:firebase-analytics:17.2.0'
+    implementation 'com.google.firebase:firebase-auth:19.0.0'
+
 }
+
