--- a/build.gradle
+++ b/build.gradle
@@ -2,10 +2,10 @@
 
 buildscript {
     ext.kotlin_version = '1.3.41'
-    ext.room_version= '2.2.0-alpha01'
+    ext.room_version= '2.2.0-beta01'
     ext.navigation_version= '1.0.0'
     ext.kodein_version='6.3.3'
-    ext.lifecycle_version= '2.2.0-alpha02'
+    ext.lifecycle_version= '2.2.0-alpha03'
     ext.retrofit_version= '2.6.1'
     repositories {
         google()
@@ -13,12 +13,13 @@ buildscript {
         
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.4.2'
+        classpath 'com.android.tools.build:gradle:3.5.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
         classpath 'android.arch.navigation:navigation-safe-args-gradle-plugin:1.0.0'
         classpath "org.jetbrains.kotlin:kotlin-android-extensions:$kotlin_version"
+        classpath 'com.google.gms:google-services:4.3.1'
     }
 }
 
