Dialog, zmiany w ekranach logowania i rejestracji
Dodanie nowego dialogu oraz zmiana jego implementacji
Usunięcie SignupActivity, od teraz jest to fragment
Dodanie fragmentu do resetowania hasła
Zmiana implementacji panelu logowania od teraz jest to fragment
Dodanie biblioteki Navigation

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -44,10 +44,7 @@
             </intent-filter>
         </activity>
         <activity
-                android:name=".ui.auth.SignupActivity"
-                android:theme="@style/AppTheme.StatusBar.Transparent" />
-        <activity
-                android:name=".ui.auth.LoginActivity"
+                android:name=".ui.auth.AuthActivity"
                 android:theme="@style/AppTheme.StatusBar.Transparent">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
