--- a/app/build.gradle
+++ b/app/build.gradle
@@ -93,10 +93,8 @@ dependencies {
     kapt "androidx.room:room-compiler:$room_version"
 
 //     Navigation - latwe nawigowanie pomiedzy fragmentami itd
-//    implementation 'androidx.navigation:navigation-fragment:2.0.0-rc02'
-//    implementation 'androidx.navigation:navigation-ui:2.0.0-rc02'
-//    implementation 'androidx.navigation:navigation-fragment-ktx:2.0.0-rc02'
-//    implementation 'androidx.navigation:navigation-ui-ktx:2.0.0-rc02'
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.2.0-alpha02'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.2.0-alpha02'
 
     implementation 'com.github.arimorty:floatingsearchview:2.1.1'
     implementation 'androidx.appcompat:appcompat:1.1.0'
