--- a/gradle.properties
+++ b/gradle.properties
@@ -19,6 +19,7 @@ android.useAndroidX=true
 android.enableJetifier=true
 # Kotlin code style for this project: "official" or "obsolete":
 kotlin.code.style=official
-android.databinding.enableV2=true
+#odblokowana ju¿ jest domyœlnie
+#android.databinding.enableV2=true
 #//zmiana
 kapt.incremental.apt=true
