--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,7 +49,6 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.core:core-ktx:1.2.0-alpha03'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.0-beta2'
-    implementation 'com.google.android.material:material:1.1.0-alpha09'
     implementation 'androidx.annotation:annotation:1.1.0'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.1.0'
     implementation 'androidx.preference:preference:1.1.0'
@@ -92,7 +91,7 @@ dependencies {
     implementation "androidx.legacy:legacy-support-v4:1.0.0"
     kapt "androidx.room:room-compiler:$room_version"
 
-//     Navigation - latwe nawigowanie pomiedzy fragmentami itd
+    // Navigation - latwe nawigowanie pomiedzy fragmentami itd
     implementation 'androidx.navigation:navigation-fragment-ktx:2.2.0-alpha02'
     implementation 'androidx.navigation:navigation-ui-ktx:2.2.0-alpha02'
 
@@ -108,5 +107,6 @@ dependencies {
     implementation 'com.google.firebase:firebase-analytics:17.2.0'
     implementation 'com.google.firebase:firebase-auth:19.0.0'
     implementation 'com.google.firebase:firebase-dynamic-links:19.0.0'
+    implementation 'com.facebook.android:facebook-login:5.5.1'
 
 }
