--- a/app/build.gradle
+++ b/app/build.gradle
@@ -108,5 +108,6 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth:19.0.0'
     implementation 'com.google.firebase:firebase-dynamic-links:19.0.0'
     implementation 'com.facebook.android:facebook-login:5.5.1'
+    implementation 'com.google.firebase:firebase-firestore:21.1.1'
 
 }
