--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,6 +19,12 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
+        javaCompileOptions {
+            annotationProcessorOptions {
+                arguments = ["room.schemaLocation": "$projectDir/schemas".toString()]
+            }
+        }
     }
     buildTypes {
         release {
@@ -95,6 +101,10 @@ dependencies {
     implementation 'androidx.navigation:navigation-fragment-ktx:2.2.0-alpha02'
     implementation 'androidx.navigation:navigation-ui-ktx:2.2.0-alpha02'
 
+    // Dodawanie zdjec
+    implementation 'com.github.bumptech.glide:glide:4.9.0'
+    kapt 'com.github.bumptech.glide:compiler:4.9.0'
+
     implementation 'com.github.arimorty:floatingsearchview:2.1.1'
     implementation 'androidx.appcompat:appcompat:1.1.0'
 
@@ -109,5 +119,6 @@ dependencies {
     implementation 'com.google.firebase:firebase-dynamic-links:19.0.0'
     implementation 'com.facebook.android:facebook-login:5.5.1'
     implementation 'com.google.firebase:firebase-firestore:21.1.1'
+    implementation 'com.google.firebase:firebase-storage:19.0.1'
 
 }
