--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
         package="com.client.traveller">
 
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" /> <!-- google maps -->
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 
@@ -58,7 +58,8 @@
         <activity android:name="com.facebook.FacebookActivity"
                 android:configChanges=
                         "keyboard|keyboardHidden|screenLayout|screenSize|orientation"
-                android:label="@string/app_name" />
+                android:label="@string/app_name"
+                />
         <activity
                 android:name="com.facebook.CustomTabActivity"
                 android:exported="true">
@@ -69,6 +70,15 @@
                 <data android:scheme="@string/fb_login_protocol_scheme" />
             </intent-filter>
         </activity>
+
+        <service
+                android:name=".data.services.UploadService"
+                android:exported="false" />
+
+        <service
+                android:name=".data.services.DownloadService"
+                android:exported="false" />
+
     </application>
 
 </manifest>
