--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,12 @@
             android:theme="@style/AppTheme"
             android:usesCleartextTraffic="true"
             tools:ignore="GoogleAppIndexingWarning">
+        <activity
+                android:name=".ui.trips.TripActivity"
+                android:theme="@style/AppTheme.StatusBar.Transparent"
+                android:parentActivityName=".ui.home.HomeActivity">
+
+        </activity>
 
         <uses-library
                 android:name="org.apache.http.legacy"
@@ -36,11 +42,17 @@
                 android:name=".ui.home.HomeActivity"
                 android:theme="@style/AppTheme.StatusBar.Transparent">
             <intent-filter android:autoVerify="true">
-                <action android:name="android.intent.action.VIEW"/>
-                <category android:name="android.intent.category.DEFAULT"/>
-                <category android:name="android.intent.category.BROWSABLE"/>
-                <data android:scheme="https" android:host="travellersystems.page.link" />
-                <data android:scheme="http" android:host="travellersystems.page.link"/>
+                <action android:name="android.intent.action.VIEW" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+
+                <data
+                        android:host="travellersystems.page.link"
+                        android:scheme="https" />
+                <data
+                        android:host="travellersystems.page.link"
+                        android:scheme="http" />
             </intent-filter>
         </activity>
         <activity
@@ -48,25 +60,28 @@
                 android:theme="@style/AppTheme.StatusBar.Transparent">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
 
-        <meta-data android:name="com.facebook.sdk.ApplicationId"
-                android:value="@string/facebook_app_id"/>
+        <meta-data
+                android:name="com.facebook.sdk.ApplicationId"
+                android:value="@string/facebook_app_id" />
 
-        <activity android:name="com.facebook.FacebookActivity"
-                android:configChanges=
-                        "keyboard|keyboardHidden|screenLayout|screenSize|orientation"
-                android:label="@string/app_name"
-                />
+        <activity
+                android:name="com.facebook.FacebookActivity"
+                android:configChanges="keyboard|keyboardHidden|screenLayout|screenSize|orientation"
+                android:label="@string/app_name" />
         <activity
                 android:name="com.facebook.CustomTabActivity"
                 android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
+
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
+
                 <data android:scheme="@string/fb_login_protocol_scheme" />
             </intent-filter>
         </activity>
@@ -74,11 +89,9 @@
         <service
                 android:name=".data.services.UploadService"
                 android:exported="false" />
-
         <service
                 android:name=".data.services.DownloadService"
                 android:exported="false" />
-
     </application>
 
 </manifest>
