--- a/app/build.gradle
+++ b/app/build.gradle
@@ -117,6 +117,7 @@ dependencies {
     implementation "com.jakewharton.threetenabp:threetenabp:1.2.0"
 
     implementation 'com.github.arimorty:floatingsearchview:2.1.1'
+    implementation 'com.github.mancj:MaterialSearchBar:0.8.2'
     implementation 'androidx.appcompat:appcompat:1.1.0'
 
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-play-services:1.1.1'
@@ -124,6 +125,7 @@ dependencies {
     implementation "com.google.android.gms:play-services-location:17.0.0"
     implementation 'com.google.android.gms:play-services-auth:17.0.0'
     implementation "com.google.maps:google-maps-services:0.9.4"
+    implementation 'com.google.android.gms:play-services-places:17.0.0'
     implementation "org.slf4j:slf4j-simple:1.7.26"
 
     //firebase compontents
