--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,25 +51,26 @@ android {
     androidExtensions {
         experimental = true
     }
+
 }
 
 dependencies {
+
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'androidx.core:core-ktx:1.2.0-alpha03'
+    implementation 'androidx.core:core-ktx:1.2.0-alpha04'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.0-beta2'
     implementation 'androidx.annotation:annotation:1.1.0'
-    implementation 'androidx.lifecycle:lifecycle-extensions:2.1.0'
     implementation 'androidx.preference:preference:1.1.0'
     testImplementation 'junit:junit:4.13-beta-3'
     androidTestImplementation 'androidx.test:runner:1.3.0-alpha02'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0-alpha02'
 
-    implementation 'com.google.android.material:material:1.0.0'
-    implementation 'androidx.recyclerview:recyclerview:1.0.0'
     implementation 'androidx.cardview:cardview:1.0.0'
-    implementation 'com.github.scottyab:showhidepasswordedittext:0.8'
+    implementation "androidx.browser:browser:1.2.0-alpha08"
+    implementation "androidx.recyclerview:recyclerview:1.1.0-beta04"
+    implementation "com.arthurivanets.adapster:adapster:1.0.12"
 
     // Gson
     implementation "com.google.code.gson:gson:2.8.5"
@@ -82,7 +83,6 @@ dependencies {
     implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
     implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
     implementation 'com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:0.9.2'
-    implementation 'com.squareup.okhttp3:logging-interceptor:4.0.1'
 
     // ViewModel
     implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
@@ -94,7 +94,7 @@ dependencies {
     implementation "org.kodein.di:kodein-di-framework-android-x:$kodein_version"
 
     // New Material Design
-    implementation 'com.google.android.material:material:1.1.0-alpha09'
+    implementation 'com.google.android.material:material:1.1.0-beta01'
 
     // Room - baza danych ( adnotacje query, database, entity, itd)
     implementation "androidx.room:room-runtime:$room_version"
@@ -116,16 +116,14 @@ dependencies {
     // Better dateTime-time support even on older Android versions
     implementation "com.jakewharton.threetenabp:threetenabp:1.2.0"
 
-    implementation 'com.github.arimorty:floatingsearchview:2.1.1'
-    implementation 'com.github.mancj:MaterialSearchBar:0.8.2'
-    implementation 'androidx.appcompat:appcompat:1.1.0'
+    // search bary
+    implementation "com.paulrybitskyi.persistentsearchview:persistentsearchview:1.1.1"
 
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-play-services:1.1.1'
     implementation "com.google.android.gms:play-services-maps:17.0.0"
     implementation "com.google.android.gms:play-services-location:17.0.0"
     implementation 'com.google.android.gms:play-services-auth:17.0.0'
     implementation "com.google.maps:google-maps-services:0.9.4"
-    implementation 'com.google.android.gms:play-services-places:17.0.0'
     implementation "org.slf4j:slf4j-simple:1.7.26"
 
     //firebase compontents
@@ -137,5 +135,6 @@ dependencies {
     implementation 'com.google.firebase:firebase-storage:19.0.1'
 
     implementation 'com.google.android.libraries.places:places:2.0.0'
+
 
 }
