--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,13 +15,11 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
+        <activity android:name=".ui.about.AboutActivity"></activity>
         <activity
-            android:name=".ui.trips.TripActivity"
+            android:name=".ui.trip.TripActivity"
             android:parentActivityName=".ui.home.HomeActivity"
-            android:theme="@style/AppTheme.StatusBar.Transparent">
-
-        </activity>
-
+            android:theme="@style/AppTheme.StatusBar.Transparent"></activity>
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
