--- a/app/build.gradle
+++ b/app/build.gradle
@@ -123,6 +123,7 @@ dependencies {
     implementation "com.google.android.gms:play-services-maps:17.0.0"
     implementation "com.google.android.gms:play-services-location:17.0.0"
     implementation 'com.google.android.gms:play-services-auth:17.0.0'
+    implementation 'com.google.maps.android:android-maps-utils:0.6.1'
     implementation "org.slf4j:slf4j-simple:1.7.26"
 
     //firebase compontents
