--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,13 +1,8 @@
 apply plugin: 'com.android.application'
-
 apply plugin: 'kotlin-android'
-
 apply plugin: 'kotlin-android-extensions'
-
 apply plugin: 'kotlin-kapt'
-
-apply plugin: 'androidx.navigation.safeargs'
-
+apply plugin: "androidx.navigation.safeargs.kotlin"
 apply plugin: 'com.google.gms.google-services'
 
 android {
@@ -59,21 +54,21 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'androidx.core:core-ktx:1.2.0-alpha04'
+    implementation 'androidx.core:core-ktx:1.2.0-beta01'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.0-beta2'
     implementation 'androidx.annotation:annotation:1.1.0'
-    implementation 'androidx.preference:preference:1.1.0'
+    implementation 'androidx.preference:preference-ktx:1.1.0'
     testImplementation 'junit:junit:4.13-beta-3'
     androidTestImplementation 'androidx.test:runner:1.3.0-alpha02'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0-alpha02'
 
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation "androidx.browser:browser:1.2.0-alpha08"
-    implementation "androidx.recyclerview:recyclerview:1.1.0-beta04"
+    implementation 'androidx.recyclerview:recyclerview:1.0.0'
     implementation "com.arthurivanets.adapster:adapster:1.0.12"
 
     // Gson
-    implementation "com.google.code.gson:gson:2.8.5"
+    implementation 'com.google.code.gson:gson:2.8.6'
 
     // Kotlin Android Coroutines - zarzadzanie watkami, dlugie wykonywanie zadan
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.0'
@@ -102,19 +97,19 @@ dependencies {
     kapt "androidx.room:room-compiler:$room_version"
 
     // Navigation - latwe nawigowanie pomiedzy fragmentami itd
-    implementation 'androidx.navigation:navigation-fragment-ktx:2.2.0-alpha02'
-    implementation 'androidx.navigation:navigation-ui-ktx:2.2.0-alpha02'
+    implementation "androidx.navigation:navigation-fragment-ktx:$navigation_version"
+    implementation "androidx.navigation:navigation-ui-ktx:$navigation_version"
 
     // Dodawanie zdjec
-    implementation 'com.github.bumptech.glide:glide:4.9.0'
-    kapt 'com.github.bumptech.glide:compiler:4.9.0'
+    implementation 'com.github.bumptech.glide:glide:4.10.0'
+    kapt 'com.github.bumptech.glide:compiler:4.10.0'
 
     // groupie - recycler view
     implementation "com.xwray:groupie:2.6.0"
     implementation "com.xwray:groupie-kotlin-android-extensions:2.6.0"
 
     // Better dateTime-time support even on older Android versions
-    implementation "com.jakewharton.threetenabp:threetenabp:1.2.0"
+    implementation 'com.jakewharton.threetenabp:threetenabp:1.2.1'
 
     // search bary
     implementation "com.paulrybitskyi.persistentsearchview:persistentsearchview:1.1.1"
@@ -124,16 +119,17 @@ dependencies {
     implementation "com.google.android.gms:play-services-location:17.0.0"
     implementation 'com.google.android.gms:play-services-auth:17.0.0'
     implementation 'com.google.maps.android:android-maps-utils:0.6.1'
-    implementation "org.slf4j:slf4j-simple:1.7.26"
+    implementation 'org.slf4j:slf4j-simple:1.7.28'
 
     //firebase compontents
     implementation 'com.google.firebase:firebase-analytics:17.2.0'
-    implementation 'com.google.firebase:firebase-auth:19.0.0'
+    implementation 'com.google.firebase:firebase-auth:19.1.0'
     implementation 'com.google.firebase:firebase-dynamic-links:19.0.0'
-    implementation 'com.facebook.android:facebook-login:5.5.1'
+    implementation 'com.facebook.android:facebook-login:5.8.0'
     implementation 'com.google.firebase:firebase-firestore:21.1.1'
-    implementation 'com.google.firebase:firebase-storage:19.0.1'
+    implementation 'com.google.firebase:firebase-storage:19.1.0'
 
     implementation 'com.google.android.libraries.places:places:2.0.0'
 
+    implementation 'androidx.fragment:fragment-ktx:1.2.0-beta02'
 }
