--- a/build.gradle
+++ b/build.gradle
@@ -2,11 +2,11 @@
 
 buildscript {
     ext.kotlin_version = '1.3.50'
-    ext.room_version= '2.2.0-beta01'
-    ext.navigation_version= '1.0.0'
+    ext.room_version= '2.2.0'
+    ext.navigation_version= '2.1.0'
     ext.kodein_version='6.3.3'
-    ext.lifecycle_version= '2.2.0-alpha03'
-    ext.retrofit_version= '2.6.1'
+    ext.lifecycle_version= '2.2.0-beta01'
+    ext.retrofit_version= '2.6.2'
     repositories {
         google()
         jcenter()
@@ -17,7 +17,7 @@ buildscript {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
-        classpath 'android.arch.navigation:navigation-safe-args-gradle-plugin:1.0.0'
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$navigation_version"
         classpath "org.jetbrains.kotlin:kotlin-android-extensions:$kotlin_version"
         classpath 'com.google.gms:google-services:4.3.2'
     }
