--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,8 +8,6 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 
-<!--    android:allowBackup="true" dane aplikacji zostają po jej reinstalacji więc room będzie się darł żeby uaktualnić numer bazy danych-->
-
     <application
         android:name=".TravellerAplication"
         android:allowBackup="false"
@@ -17,6 +15,9 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
+        <activity
+            android:name=".ui.chat.ChatActivity"
+            android:theme="@style/AppTheme.StatusBar.Transparent" />
         <activity android:name=".ui.about.AboutActivity" />
         <activity
             android:name=".ui.trip.TripActivity"
