Dodanie nowej encji bazy danych messeage Dodanie konwerterów bazy danych dla LocalDateTime ( nie przetestowane) Dodanie klasy do zarządzania wiadomościami w firestore Dodanie osobnej aktyności do ekranu tworzenia wiadomości Dodanie ScopedActivity

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -136,4 +136,7 @@ dependencies {
 
     // wyśitlanie okrągłych obrazów
     implementation 'de.hdodenhof:circleimageview:3.0.1'
+
+    // auto resize edit text
+    implementation 'com.github.ViksaaSkool:AutoFitEditText:53238e2d29'
 }
