--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,11 +6,12 @@ apply plugin: "androidx.navigation.safeargs.kotlin"
 apply plugin: 'com.google.gms.google-services'
 
 android {
-    compileSdkVersion 28
+    compileSdkVersion 29
+    buildToolsVersion = '29.0.0'
     defaultConfig {
         applicationId "com.client.traveller"
         minSdkVersion 23 //android 6.0
-        targetSdkVersion 28
+        targetSdkVersion 29 //android 10
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -31,9 +32,7 @@ android {
             minifyEnabled = false
         }
     }
-    dataBinding {
-        enabled = true
-    }
+    
     compileOptions {
         sourceCompatibility = '1.8'
         targetCompatibility = '1.8'
@@ -41,12 +40,10 @@ android {
     kotlinOptions {
         jvmTarget = "1.8"
     }
-    buildToolsVersion = '28.0.3'
 
     androidExtensions {
         experimental = true
     }
-
 }
 
 dependencies {
@@ -54,8 +51,8 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'androidx.core:core-ktx:1.2.0-beta01'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.0-beta2'
+    implementation 'androidx.core:core-ktx:1.2.0-beta02'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.0-beta3'
     implementation 'androidx.annotation:annotation:1.1.0'
     implementation 'androidx.preference:preference-ktx:1.1.0'
     testImplementation 'junit:junit:4.13-beta-3'
@@ -63,7 +60,7 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0-alpha02'
 
     implementation 'androidx.cardview:cardview:1.0.0'
-    implementation "androidx.browser:browser:1.2.0-alpha08"
+    implementation "androidx.browser:browser:1.2.0-alpha09"
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
     implementation "com.arthurivanets.adapster:adapster:1.0.12"
 
@@ -92,7 +89,7 @@ dependencies {
     implementation "org.kodein.di:kodein-di-framework-android-x:$kodein_version"
 
     // New Material Design
-    implementation 'com.google.android.material:material:1.1.0-beta01'
+    implementation 'com.google.android.material:material:1.2.0-alpha01'
 
     // Room - baza danych ( adnotacje query, database, entity, itd)
     implementation "androidx.room:room-runtime:$room_version"
@@ -126,17 +123,17 @@ dependencies {
     implementation 'org.slf4j:slf4j-simple:1.7.28'
 
     //firebase compontents
-    implementation 'com.google.firebase:firebase-analytics:17.2.0'
+    implementation 'com.google.firebase:firebase-analytics:17.2.1'
     implementation 'com.google.firebase:firebase-auth:19.1.0'
     implementation 'com.google.firebase:firebase-dynamic-links:19.0.0'
     implementation 'com.facebook.android:facebook-login:5.8.0'
-    implementation 'com.google.firebase:firebase-firestore:21.1.1'
+    implementation 'com.google.firebase:firebase-firestore:21.3.0'
     implementation 'com.google.firebase:firebase-storage:19.1.0'
-    implementation 'com.google.firebase:firebase-messaging:20.0.0'
+    implementation 'com.google.firebase:firebase-messaging:20.0.1'
 
-    implementation 'com.google.android.libraries.places:places:2.0.0'
+    implementation 'com.google.android.libraries.places:places:2.1.0'
 
-    implementation 'androidx.fragment:fragment-ktx:1.2.0-beta02'
+    implementation 'androidx.fragment:fragment-ktx:1.2.0-rc02'
 
     // wyśitlanie okrągłych obrazów
     implementation 'de.hdodenhof:circleimageview:3.0.1'
