--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,7 +51,7 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'androidx.core:core-ktx:1.2.0-beta02'
+    implementation 'androidx.core:core-ktx:1.2.0-rc01'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.0-beta3'
     implementation 'androidx.annotation:annotation:1.1.0'
     implementation 'androidx.preference:preference-ktx:1.1.0'
@@ -60,16 +60,16 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0-alpha02'
 
     implementation 'androidx.cardview:cardview:1.0.0'
-    implementation "androidx.browser:browser:1.2.0-alpha09"
-    implementation 'androidx.recyclerview:recyclerview:1.0.0'
+    implementation "androidx.browser:browser:1.2.0-beta01"
+    implementation 'androidx.recyclerview:recyclerview:1.1.0'
     implementation "com.arthurivanets.adapster:adapster:1.0.12"
 
     // Gson
     implementation 'com.google.code.gson:gson:2.8.6'
 
     // Kotlin Android Coroutines - zarzadzanie watkami, dlugie wykonywanie zadan
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.0'
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.0"
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.2'
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.2"
 
     // Retrofit - zarzadzanie rest api - endpoint
     implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
@@ -78,8 +78,7 @@ dependencies {
 
     // ViewModel
     implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
-    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
-    kapt "androidx.lifecycle:lifecycle-compiler:$lifecycle_version"
+    implementation "androidx.lifecycle:lifecycle-common-java8:$lifecycle_version"
 
     //livedata {}
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.2.0-rc02"
