Dodanie miejsc w pobliżu dla wszystkich punktów wycieczki Dodanie listenera do listview który po kliknięciu itemu dodaje go do punktów wycieczki Dodanie listenera do listview waypointów ywcieczki który po kliknięciu itemy usuwa go Dodanie aktywności z wycieczką w której możemy edytować aktualnie wybraną wycieczkę, jeśli jesteśmy jeje autorem

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,10 +17,11 @@
         tools:ignore="GoogleAppIndexingWarning"
         tools:replace="android:allowBackup">
         <activity
+            android:name=".ui.tripInfo.TripInfoActivity"
+            android:theme="@style/AppTheme.StatusBar.Transparent" />
+        <activity
             android:name=".ui.nearby.NearbyPlacesActivity"
-            android:theme="@style/AppTheme.StatusBar.Transparent"
-
-            />
+            android:theme="@style/AppTheme.StatusBar.Transparent" />
         <activity
             android:name=".ui.chat.messeages.MesseageActivity"
             android:parentActivityName=".ui.chat.ChatActivity"
@@ -29,8 +30,7 @@
         <activity
             android:name=".ui.chat.ChatActivity"
             android:theme="@style/AppTheme.StatusBar.Transparent" />
-        <activity
-            android:name=".ui.about.AboutActivity" />
+        <activity android:name=".ui.about.AboutActivity" />
         <activity
             android:name=".ui.trip.TripActivity"
             android:parentActivityName=".ui.home.HomeActivity"
